=================

* docutils/io.py:

  - Added code to determine the input encoding from data: encoding
    declarations or the presence of byte order marks (UTF-8 & UTF-16).

* docutils/nodes.py:

  - Added ``document.__getstate__`` method, for pickling.

* docutils/parsers/rst/states.py:

  - Unquoted targets beginning with an underscore (``.. __target:
    URI``) are no longer accepted.

* docutils/writers/html4css1/__init__.py:

  - Moved template functionality from the PEP/HTML writer here.
  - Expanded the fragments available in the ``parts`` attribute.

* docutils/writers/html4css1/template.txt: Added to project.

* docutils/writers/pep_html/:

  - Moved template functionality to the HTML writer.

* docutils/writers/s5_html/__init__.py:

  - Added ``view_mode`` & ``hidden_controls`` settings
    (``--view-mode`` & ``--hidden-controls/--visible-controls``
    options).

* docutils/writers/latex2e/__init__.py:

  - Apply patch for custom roles with classes from Edward Loper.

Release 0.4 (2006-01-09)
========================

* General:

  - Updated the project policies for trunk/branch development &
    version numbering.

* docutils/__init__.py:

  - Added ``__version_details__`` attribute to describe code source
    (repository/snapshot/release).
  - Replaced ``default_transforms`` attribute of TransformSpec with
    ``get_transforms()`` method.

* docutils/core.py:

  - Added ``publish_doctree`` and ``publish_from_doctree`` convenience
    functions, for document tree extraction and reprocessing.

* docutils/io.py:

  - Added ``DocTreeInput`` class, for reprocessing existing documents.
  - Added support for non-Unicode (e.g. binary) writer output.

* docutils/nodes.py:

  - Re-introduced ``Targetable.indirect_reference_name``, for
    MoinMoin/reST compatibility (removed in r3124/r3129).
  - Added ``serial_escape`` function; escapes string values that are
    elements of a list, for serialization.  Modified Docutils-XML